MMCP release 3 - the MCP Toolkit at 0.157.0
Toolkit 0.157.0, MCP server 0.79.0, convention plugin 0.7.0, Minecraft 26.2.
828 files, the tracked tree exported with git archive so nothing untracked could
ride along - 31 new files over release 2.

What is new: mmcpd, a daemon that hosts the MCP server for every project on the
machine (registration is a URL, the client spawns nothing) and watches each
registered project's src/, so a file you save lands in the running game with no
tool called - batched by kind, an identical rewrite refused before any game is
dialled, every change a row on a feed and an `edit` event in the game. A cockpit
served at /ui/. The mixin hotswap tier, re-entry and reinit, and the compile
inside the swap. The entity check's four gaps and its joint-aware tolerance.

Verified: the whole probe battery at this version, 2026-09-14, 112 files,
950 pass / 1 fail with the one red green alone - and 108 of the 109 files shared
with release 2's battery scored IDENTICALLY, every difference accounted for
(three new probe files, eight new cases in a fourth). No shared file lost a test.
gradle test 228/228. RELEASE.md 2.11 is the record.

The four pre-commit checks, on this tree: the three work-list paths hold stubs so
all citations resolve, zero machine paths, zero credential-shaped strings, LICENSE
present. Five tracked files had machine paths again since release 2 and were
neutralised before this snapshot.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016hC7uzYa3fEMasb7Sp7A4L